fixed Nav and cleaned HTML

--- a/css/index.css
+++ b/css/index.css
@@ -92,6 +92,10 @@ header .links {
 .links a {
     color: black;
     font-size: .9rem;
+    transition: all .2s ease-in-out;
+}
+.links a:hover {
+    transform: scale(1.2); 
 }
 
 
